--- a/web/app.html
+++ b/web/app.html
@@ -7,41 +7,49 @@
 	</head>
 	<body>
 			AppProd
+			<div id="event">Click la </div>
 			<script>
+ 				var Environnement = function (mode){
 
- 				var Environnement = {
+ 					var env = null ,
+	 					path =  "http://localhost/JavaScript/LetDooJs/" ,
+	 					folderWeb = "web";
 
- 					env : null ,
-
- 					getPath : function () {
- 						var path = "http://localhost/JavaScript/LetDooJs/";
-				 		return path;
- 					},
-
- 					initEnvironnement : function (mode){
-						this.env = mode ;
-
- 						if (mode == "dev")
- 							return this.setEnvironnementDev();
- 						if (mode == "prod")
- 							return this.setEnvironnementProd();
+	 				(function initEnvironnement () {
+						if (env != null) return false;
+						env = mode ;
+ 						if (mode == "dev") return setEnvironnementDev();
+ 						if (mode == "prod") return setEnvironnementProd();
  						return alert ("Env not find ! ");
- 					},
 
- 					setEnvironnementDev : function () {
+ 					})()
+
+	 				function setEnvironnementDev () {
  						var script = document.createElement("script");
 						script.type = "text/javascript";
-						script.src = this.getPath() + "lib/require.js";
-						script.setAttribute("data-main" , this.getPath() + "app/AppKernel.js");
+						script.src = path + "lib/require/require.js";
+						script.setAttribute("data-main" ,path + "app/AppKernel.js");
 						document.body.appendChild(script);
- 					},
+ 					}
 
- 					setEnvironnementProd : function () {
+ 					function setEnvironnementProd () {
  						alert ("Not implemented  ! ");
  					}
+
+
+ 					return {
+						getPath : function () {
+							return path;
+						},
+
+						getWebPath : function(){
+							return path + folderWeb;
+						}
+ 					}
+
  				}
 
-				window.onload = Environnement.initEnvironnement("dev");
+				var Environnement = new Environnement("dev");
 
 			</script>
 	</body>
