--- a/web/app.html
+++ b/web/app.html
@@ -18,6 +18,7 @@
 	 				(function initEnvironnement () {
 						if (env != null) return false;
 						env = mode ;
+						setPath();
  						if (mode == "dev") return setEnvironnementDev();
  						if (mode == "prod") return setEnvironnementProd();
  						return alert ("Env not find ! ");
@@ -34,6 +35,12 @@
 
  					function setEnvironnementProd () {
  						alert ("Not implemented  ! ");
+ 					}
+
+ 					function setPath (){
+ 						var regex = new RegExp("(.*)web\/*");
+ 						regex.test(location.href);
+						path = RegExp["$1"];
  					}
 
 
