Add class listenner & App

--- a/web/app.html
+++ b/web/app.html
@@ -3,11 +3,10 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Example App with LetDooJs</title>
+		<script type="text/javascript"></script>
 		<!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	</head>
 	<body>
-			AppProd
-			<div id="event">Click la </div>
 			<script>
  				var Environnement = function (mode){
 
