--- a/newLetDooJs/app.html
+++ b/newLetDooJs/app.html
@@ -3,10 +3,11 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Example App with LetDooJs</title>
-		<script type="text/javascript" src="js/letdoojs/letdoojs.js"></script>
+		<script type="text/javascript" src="js/letdoojs/app/AppKernel.js"></script>
+		<script type="text/javascript" src="js/letdoojs/LetDooJs_System.js"></script>
 		<!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	</head>
 	<body>
-
+		App
 	</body>
 </html>
