--- a/newLetDooJs/web/app.html
+++ b/newLetDooJs/web/app.html
@@ -4,53 +4,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Example App with LetDooJs</title>
 		<!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+		<script src="http://localhost/letdoojs/newLetDooJs/letdoojs/letdoojs.js"></script>
 		<script>
-
-		 	var LetDooJS = {
-				App : {} ,
-				Core : {} ,
-				Utils : {},
-				Config : {}
-			};
-
-			LetDooJS.Core.Environnement = function (){
-				 var path =  "http://" ,
-				 	 folderWeb = "web",
-				 	 DOMHead = document.getElementsByTagName("head")[0];
-
-				 setPath();
-
-			 	function setPath (){
-			 		var regex = new RegExp("(.*)" + folderWeb + "\/*");
-			 		regex.test(location.href);
-					path = RegExp["$1"];
-			 	}
-
-			 	LetDooJS.Core.Environnement.prototype.loadSystem = function () {
-					var script = document.createElement("script");
-					script.src = path + "letdoojs/LetDooJs_System.js";
-					DOMHead.appendChild(script);
-			 	}
-
-			 	LetDooJS.Core.Environnement.prototype.getDOMHead = function (){
-			 		return DOMHead
-			 	}
-
-			 	LetDooJS.Core.Environnement.prototype.getPath = function (){
-			 		return path;
-			 	}
-
-			 	LetDooJS.Core.Environnement.prototype.getWebPath = function (){
-			 		return path + folderWeb;
-			 	}
-			}
-
-			LetDooJS.App.Env = new LetDooJS.Core.Environnement();
-			LetDooJS.App.Env.loadSystem({
-				Mustache : "lib/mustache.js"
-			});
-
-
 
 			var test = function (){
 
@@ -73,7 +28,7 @@
 			a.lol ("kk",function(){
 				this.lolol();
 			})
-throw new Error('please use MY.utils.XHR.getInstance()');
+//throw new Error('please use MY.utils.XHR.getInstance()');
 			console.log(a);
 			var hh = "kk";
 			a[hh];
