--- a/web/app.html
+++ b/web/app.html
@@ -5,5 +5,8 @@
 		<title>Example App with LetDooJs</title>
 		<script src="http://localhost/letdoojs/letdoojs/letdoojs.js"></script>
 	</head>
-	<body></body>
+	<body>
+
+		<div class="contextMenu"></div>
+	</body>
 </html>
