--- a/web/app.html
+++ b/web/app.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
+<html>
 	<head>
+		<title>LetDooJs</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>Example App with LetDooJs</title>
-		<script src="http://localhost/letdoojs/letdoojs/letdoojs.js"></script>
+		<script src="http://localhost/JavaScript/LetDooJs/letdoojs/letdoojs.js"></script>
 	</head>
-	<body>
-
-		<div class="contextMenu"></div>
-	</body>
+	<body></body>
 </html>
