--- a/web/app.html
+++ b/web/app.html
@@ -3,8 +3,10 @@
 	<head>
 		<title>LetDooJs</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<!--<script src="http://localhost/JavaScript/letdoojs/web/js/letdoojs.min.js"></script>-->
-		<script src="http://localhost/JavaScript/letdoojs/letdoojs/letdoojs.js"></script>
+		<script src="http://localhost/letdoojs/letdoojs/letdoojs.js"></script>
+		<!--
+		<script src="http://localhost/letdoojs/web/js/letdoojs.min.js"></script>
+		-->
 	</head>
 	<body>
 		<script>
